<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x10"
            android:background="@android:color/transparent"
            android:padding="@dimen/x6"
            android:src="@drawable/dialog_close" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/x8"
            android:text="@string/keshixz"
            android:textColor="#41AE1D"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#41AE1D" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcy_scbShow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/item_view"
        android:orientation="horizontal"
        android:padding="@dimen/x4">

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x8"
            android:layout_weight="1"
            android:background="@color/view"
            android:gravity="center"
            android:padding="@dimen/x5"
            android:text="@string/quxiao"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/tv_true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x8"
            android:layout_weight="1"
            android:background="@color/state"
            android:gravity="center"
            android:padding="@dimen/x5"
            android:text="@string/queding"
            android:textSize="@dimen/text_16" />
    </LinearLayout>

    <!--<android.support.v7.widget.RecyclerView-->
    <!--android:id="@+id/rcy_keshi"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1" />-->

</LinearLayout>