<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/liang"
    android:orientation="vertical"
    tools:context="com.example.chen.hsms.activity.home_up.WuPinBaoActivity">



        <!--标题-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y40"
            android:background="@color/state">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/x10"
                android:paddingRight="@dimen/x20"
                android:src="@mipmap/back_toolbar" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/wupinbaomingxi"
                android:textColor="@color/white"
                android:textSize="@dimen/text_20"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/x10"
                android:gravity="center"
                android:paddingLeft="@dimen/x20"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/text_15"
                android:textStyle="normal" />
        </FrameLayout>
        <!--查询-->
        <LinearLayout
            android:id="@+id/ll_srkuang"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y35"
            android:background="@color/state"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/tv_serach"
                android:lines="1"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y25"
                android:layout_marginLeft="@dimen/x10"
                android:layout_marginRight="@dimen/x10"
                android:background="@drawable/bg_serch_et"
                android:hint="请扫码"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/x10"
                android:paddingRight="@dimen/x10"
                android:textColor="@color/bg_et_t"
                android:textColorHint="@color/bg_et_t"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_show"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y40"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/x14"
                android:text="手术灭菌包"
                android:textColor="@color/hui"
                android:textSize="@dimen/text_15" />

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/x14"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="@color/hui"
                android:textSize="@dimen/text_15" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcy_wupin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:overScrollMode="never"
            android:scrollbars="none" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_search_bao"
                android:layout_width="0dp"
                android:layout_height="@dimen/y40"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/x10"
                android:layout_weight="1"
                android:background="@drawable/next_tv_bg"
                android:gravity="center"
                android:text="@string/czscwpb"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/tv_clean_bao"
                android:layout_width="0dp"
                android:layout_height="@dimen/y40"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/x10"
                android:layout_weight="1"
                android:background="@drawable/next_tv_bg"
                android:gravity="center"
                android:text="@string/qkdqb"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_16" />
        </LinearLayout>
    </LinearLayout>

